--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,10 +22,6 @@ ext.java = [
         targetCompatibility: JavaVersion.VERSION_1_8,
 ]
 
-ext.endpoint = '"https://api.github.com/"'
-
-ext.localdb = '"DuelsDB"'
-
 def versions = [
         googleServicesPlugin: '4.0.1',
 
@@ -54,6 +50,10 @@ def versions = [
         firebase            : '16.0.5',
 
         firebaseAuth        : '4.2.1',
+
+        rxJava                : '2.0.2',
+        rxKotlin              : '2.1.0',
+        rxAndroid             : '2.0.2',
 
         // Test
         robolectric         : '3.4.2',
@@ -106,6 +106,7 @@ def libraries = [
         // Network Libraries
         retrofit           : "com.squareup.retrofit2:retrofit:$versions.retrofit",
         retrofitConverter  : "com.squareup.retrofit2:converter-gson:$versions.retrofit",
+        retrofitAdapter        : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
         okHttp             : "com.squareup.okhttp3:okhttp:$versions.okHttp",
         okHttpLogger       : "com.squareup.okhttp3:logging-interceptor:$versions.okHttp",
         gson               : "com.google.code.gson:gson:$versions.gson",
@@ -119,6 +120,11 @@ def libraries = [
         lifecycleRuntime   : "android.arch.lifecycle:runtime:$versions.lifeCycle",
         lifeCycleExtensions: "android.arch.lifecycle:extensions:$versions.lifeCycle",
         lifeCycleCompiler  : "android.arch.lifecycle:compiler:$versions.lifeCycle",
+
+        // Reactive
+        rxJava                 : "io.reactivex.rxjava2:rxandroid:$versions.rxJava",
+        rxKotlin               : "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin",
+        rxAndroid              : "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid",
 
         timber             : "com.jakewharton.timber:timber:$versions.timber",
 
@@ -156,6 +162,7 @@ ext.appDependencies = [
         //TODO: Data katmanı oluşursa oraya taşınacak
         addDependency('implementation', libraries.retrofit),
         addDependency('implementation', libraries.retrofitConverter),
+        addDependency('implementation', libraries.retrofitAdapter),
         addDependency('implementation', libraries.okHttp),
         addDependency('implementation', libraries.okHttpLogger),
         addDependency('implementation', libraries.gson),
@@ -166,6 +173,10 @@ ext.appDependencies = [
         addDependency('implementation', libraries.lifecycleRuntime),
         addDependency('implementation', libraries.lifeCycleExtensions),
         addDependency('kapt', libraries.lifeCycleCompiler),
+
+        addDependency('implementation', libraries.rxKotlin),
+        addDependency('implementation', libraries.rxAndroid),
+        addDependency('implementation', libraries.rxJava),
 
         addDependency('implementation', libraries.timber),
 
@@ -179,6 +190,9 @@ ext.appDependencies = [
         addDependency('testImplementation', libraries.assertj),
         addDependency('testImplementation', libraries.junitKotlin),
         addDependency('testImplementation', libraries.mockito),
+
+        //test debug for room
+        addDependency('debugImplementation', 'com.amitshekhar.android:debug-db:1.0.4'),
 ]
 
 static def addDependency(config, dependency) {
