--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,8 +2,8 @@
 
 ext.app = [
         minSdk    : 21,
-        targetSdk : 27,
-        compileSdk: 27,
+        targetSdk : 28,
+        compileSdk: 28,
         buildTools: '28.0.3',
 ]
 
@@ -27,23 +27,27 @@ def versions = [
 
         gradlePlugin        : '3.2.1',
 
-        multidex            : '1.0.3',
+        multidex            : '2.0.0',
 
         kotlin              : '1.3.10',
 
-        supportLibrary      : '28.0.0',
+        supportLibrary      : '1.0.0',
+
+        supportLibraryRC01  : '1.0.0-rc01',
+
         constraintLayout    : '1.1.2',
+
+        archComp            : '2.0.0-rc01',
 
         dagger              : '2.16',
 
         retrofit            : '2.3.0',
+
         okHttp              : '3.8.1',
+
         gson                : '2.8.1',
 
         javaxInject         : '1',
-
-        room                : '1.1.1',
-        lifeCycle           : '1.1.1',
 
         timber              : '4.5.1',
 
@@ -52,14 +56,11 @@ def versions = [
         firebaseAuth        : '4.2.1',
 
         rxJava                : '2.0.2',
-        rxKotlin              : '2.1.0',
-        rxAndroid             : '2.0.2',
 
-        // Test
-        robolectric         : '3.4.2',
-        junit               : '4.12',
-        assertJ             : '3.8.0',
-        mockitoKotlin       : '1.5.0',
+        rxJava              : '2.0.2',
+        rxKotlin            : '2.1.0',
+        rxAndroid           : '2.0.2',
+
 ]
 
 def pluginLibs = [
@@ -83,19 +84,31 @@ ext.gradlePlugins = [
 
 def libraries = [
         // Multidex Support
-        multidex           : "com.android.support:multidex:$versions.multidex",
+        multidex           : "androidx.multidex:multidex:$versions.multidex",
 
         // Kotlin
         kotlin             : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
-        kotlinReflect      : "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin",
 
         // Support Libraries
-        appCompatV7        : "com.android.support:appcompat-v7:$versions.supportLibrary",
-        supportDesign      : "com.android.support:design:$versions.supportLibrary",
-        cardView           : "com.android.support:cardview-v7:$versions.supportLibrary",
-        constraintLayout   : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
-        supportV4          : "com.android.support:support-v4:$versions.supportLibrary",
-        recylerView        : "com.android.support:recyclerview-v7:$versions.supportLibrary",
+        appCompatV7        : "androidx.appcompat:appcompat:$versions.supportLibrary",
+        cardView           : "androidx.cardview:cardview:$versions.supportLibrary",
+        recylerView        : "androidx.recyclerview:recyclerview:$versions.supportLibrary",
+        supportV4          : "androidx.legacy:legacy-support-v4:$versions.supportLibrary",
+        viewPager          : "androidx.viewpager:viewpager:$versions.supportLibrary",
+
+        supportDesign      : "com.google.android.material:material:$versions.supportLibraryRC01",
+
+        constraintLayout   : "androidx.constraintlayout:constraintlayout:$versions.constraintLayout",
+
+        // Room
+        roomRuntime        : "androidx.room:room-runtime:$versions.archComp",
+        roomCompiler       : "androidx.room:room-compiler:$versions.archComp",
+
+        // LifeCycle
+        lifecycleCommon    : "androidx.lifecycle:lifecycle-common:$versions.archComp",
+        lifecycleRuntime   : "androidx.lifecycle:lifecycle-runtime:$versions.archComp",
+        lifeCycleExtensions: "androidx.lifecycle:lifecycle-extensions:$versions.archComp",
+        lifeCycleCompiler  : "androidx.lifecycle:lifecycle-compiler:$versions.archComp",
 
         // Dagger
         dagger             : "com.google.dagger:dagger:$versions.dagger",
@@ -106,38 +119,28 @@ def libraries = [
         // Network Libraries
         retrofit           : "com.squareup.retrofit2:retrofit:$versions.retrofit",
         retrofitConverter  : "com.squareup.retrofit2:converter-gson:$versions.retrofit",
-        retrofitAdapter        : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
+        retrofitAdapter    : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
         okHttp             : "com.squareup.okhttp3:okhttp:$versions.okHttp",
         okHttpLogger       : "com.squareup.okhttp3:logging-interceptor:$versions.okHttp",
         gson               : "com.google.code.gson:gson:$versions.gson",
 
         javaxInject        : "javax.inject:javax.inject:$versions.javaxInject",
 
-        roomRuntime        : "android.arch.persistence.room:runtime:$versions.room",
-        roomCompiler       : "android.arch.persistence.room:compiler:$versions.room",
-        roomTesting        : "android.arch.persistence.room:testing:$versions.room",
-
-        lifecycleRuntime   : "android.arch.lifecycle:runtime:$versions.lifeCycle",
-        lifeCycleExtensions: "android.arch.lifecycle:extensions:$versions.lifeCycle",
-        lifeCycleCompiler  : "android.arch.lifecycle:compiler:$versions.lifeCycle",
-
         // Reactive
-        rxJava                 : "io.reactivex.rxjava2:rxandroid:$versions.rxJava",
-        rxKotlin               : "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin",
-        rxAndroid              : "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid",
+        rxJava             : "io.reactivex.rxjava2:rxandroid:$versions.rxJava",
+        rxKotlin           : "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin",
+        rxAndroid          : "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid",
 
+        //Timber
         timber             : "com.jakewharton.timber:timber:$versions.timber",
 
+        //Firebase
         firebaseCore       : "com.google.firebase:firebase-core:$versions.firebase",
         firebaseAuth       : "com.firebaseui:firebase-ui-auth:$versions.firebaseAuth",
 
         //Test
         assertj            : "org.assertj:assertj-core:$versions.assertJ",
-        junit              : "junit:junit:$versions.junit",
-        junitKotlin        : "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin",
-        mockito            : "com.nhaarman:mockito-kotlin:$versions.mockitoKotlin",
-        robolectric        : "org.robolectric:robolectric:$versions.robolectric",
-        archTesting        : "android.arch.core:core-testing:$versions.archComp",
+
 ]
 
 ext.appDependencies = [
@@ -146,18 +149,27 @@ ext.appDependencies = [
         addDependency('implementation', libraries.kotlin),
 
         addDependency('implementation', libraries.appCompatV7),
-        addDependency('implementation', libraries.supportDesign),
+        addDependency('implementation', libraries.cardView),
         addDependency('implementation', libraries.recylerView),
         addDependency('implementation', libraries.supportV4),
-        addDependency('implementation', libraries.cardView),
+        addDependency('implementation', libraries.viewPager),
+
+        addDependency('implementation', libraries.supportDesign),
+
         addDependency('implementation', libraries.constraintLayout),
+
+        addDependency('implementation', libraries.roomRuntime),
+        addDependency('kapt', libraries.roomCompiler),
+
+        addDependency('implementation', libraries.lifecycleCommon),
+        addDependency('implementation', libraries.lifecycleRuntime),
+        addDependency('implementation', libraries.lifeCycleExtensions),
+        addDependency('kapt', libraries.lifeCycleCompiler),
 
         addDependency('implementation', libraries.dagger),
         addDependency('implementation', libraries.daggerSupport),
         addDependency('kapt', libraries.daggerCompiler),
         addDependency('kapt', libraries.daggerProcessor),
-
-        addDependency('testImplementation', libraries.junit),
 
         //TODO: Data katmanı oluşursa oraya taşınacak
         addDependency('implementation', libraries.retrofit),
@@ -167,12 +179,7 @@ ext.appDependencies = [
         addDependency('implementation', libraries.okHttpLogger),
         addDependency('implementation', libraries.gson),
 
-        addDependency('implementation', libraries.roomRuntime),
-        addDependency('kapt', libraries.roomCompiler),
-
-        addDependency('implementation', libraries.lifecycleRuntime),
-        addDependency('implementation', libraries.lifeCycleExtensions),
-        addDependency('kapt', libraries.lifeCycleCompiler),
+        addDependency('implementation', libraries.javaxInject),
 
         addDependency('implementation', libraries.rxKotlin),
         addDependency('implementation', libraries.rxAndroid),
@@ -184,12 +191,6 @@ ext.appDependencies = [
         addDependency('implementation', libraries.firebaseAuth),
 
         //TODO: kullanılmazsa silinecek
-        addDependency('implementation', libraries.javaxInject),
-
-        addDependency('testImplementation', libraries.roomTesting),
-        addDependency('testImplementation', libraries.assertj),
-        addDependency('testImplementation', libraries.junitKotlin),
-        addDependency('testImplementation', libraries.mockito),
 
         //test debug for room
         addDependency('debugImplementation', 'com.amitshekhar.android:debug-db:1.0.4'),
