--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,7 +39,7 @@ def versions = [
 
         archComp            : '2.0.0-rc01',
 
-        dagger              : '2.20',
+        dagger              : '2.16',
 
         retrofit            : '2.3.0',
 
@@ -111,7 +111,9 @@ def libraries = [
         lifeCycleCompiler  : "androidx.lifecycle:lifecycle-compiler:$versions.archComp",
 
         // Dagger
+
         dagger             : "com.google.dagger:dagger:$versions.dagger",
+        daggerAndroid      : "com.google.dagger:dagger-android:$versions.dagger",
         daggerSupport      : "com.google.dagger:dagger-android-support:$versions.dagger",
         daggerCompiler     : "com.google.dagger:dagger-compiler:$versions.dagger",
         daggerProcessor    : "com.google.dagger:dagger-android-processor:$versions.dagger",
@@ -167,6 +169,7 @@ ext.appDependencies = [
         addDependency('kapt', libraries.lifeCycleCompiler),
 
         addDependency('implementation', libraries.dagger),
+        addDependency('implementation', libraries.daggerAndroid),
         addDependency('implementation', libraries.daggerSupport),
         addDependency('kapt', libraries.daggerCompiler),
         addDependency('kapt', libraries.daggerProcessor),
