--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,34 @@ android {
 
     }
 
+    sourceSets {
+        main {
+            res.srcDirs = getSourceDirectories()
+        }
+    }
 
 }
 
 dependencies {
     addDependencies(dependencies, appDependencies)
+}
+
+static def getSourceDirectories() {
+    def directories = new ArrayList<>()
+    directories.add('src/main/res')
+    def layoutsDir = new File('App/src/main/res/layout')
+
+    layoutsDir.eachDir {
+        directories.add(it.canonicalPath)
+        def fragmentsDir = new File(it.canonicalPath + '/fragments')
+        if (fragmentsDir.exists()) {
+            fragmentsDir.eachDir {
+                directories.add(it.canonicalPath)
+            }
+        }
+    }
+
+    return directories
 }
 
 apply plugin: 'com.google.gms.google-services'
